--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Hello</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../CSS/default.css" />
+    <link
+      rel="icon"
+      href="https://public-assets.envato-static.com/icons/themeforest.net/apple-touch-icon-72x72-precomposed.png"
+      type="image/x-icon"
+    />
+    <title>Target</title>
+  </head>
+  <body>
+    <div id="page">
+      <header>
+        <div id="top">
+          <div class="frame">
+            <h1>
+              <a href="#">
+                <img src="../Img/logo.png" alt="Logo" />
+                Premium landing page template
+              </a>
+            </h1>
+            <h3 class="call">Call Now! &nbsp1-800-123-456</h3>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </header>
+      <div id="top-container">
+        <div class="frame">
+          <div class="row justify-content-between">
+            <div class="col-lg-6 float-left">
+              <h2 class="title">
+                The perfect way to convert your traffic into sales
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In hic,
+                libero exercitationem est voluptate quibusdam, aspernatur eaque
+                necessitatibus dolorum porro accusamus.
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum,
+                amet.
+              </p>
+              <a href="#" class="orange">
+                <button class="btn btn-primary">Purchase now!</button>
+              </a>
+              &nbsp;&nbsp;
+              <span style="font-size: 12px; color: #8c8c8c"
+                ><strong>or</strong></span
+              >
+              &nbsp;&nbsp;
+              <a href="#" class="black">
+                <button class="btn btn-primary">Take a tour</button>
+              </a>
+            </div>
+            <div id = "pic" class="col-lg-6 float-right">
+              <img src="../Img/slide1.jpg" alt="" />
+            </div>
+            <div class="clear"></div>
+          </div>
+        </div>
+      </div>
+      <div id="container">
+        <div class="frame">
+          <div class="row justify-content-around">
+            <div class="col-lg-4 float-left">
+              <img src="../Img/1.png" alt="" />
+              <div class="content">
+                <h3><a href="#">Quick and easy</a></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Pariatur nemo repellat sequi dolorum vel explicabo id quo
+                  quibusdam perferendis provident. Facilis corrupti consequuntur
+                  sit voluptatibus?
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 float-left">
+              <img src="../Img/2.png" alt="" />
+              <div class="content">
+                <h3><a href="#">Less risky </a></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Pariatur nemo repellat sequi dolorum vel explicabo id quo
+                  quibusdam perferendis provident. Facilis corrupti consequuntur
+                  sit voluptatibus?
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <img src="../Img/3.png" alt="" />
+              <div class="content">
+                <h3><a href="#"> Optimized </a></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Pariatur nemo repellat sequi dolorum vel explicabo id quo
+                  quibusdam perferendis provident. Facilis corrupti consequuntur
+                  sit voluptatibus?
+                </p>
+              </div>
+            </div>
+            <div class="clear"></div>
+          </div>
+        </div>
+        <div class="end"></div>
+        <div class="frame">
+          <div class="row justify-content-start">
+            <div class="col-lg-7 float-left">
+              <h3>Check out the features</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae veniam impedit assumenda maiores quaerat consequatur
+                necessitatibus voluptates repellendus commodi officia adipisci
+                nobis veritatis quo aperiam praesentium libero unde voluptatum
+                distinctio aut fugiat, illo accusantium repudiandae ullam
+                architecto. Facere eaque dolorum officiis repellat voluptatem
+                odio maxime sequi deserunt eveniet expedita culpa labore fuga
+                iusto laudantium consectetur natus, laboriosam ducimus. Libero
+                odit tenetur est fuga, nobis eligendi quos hic ab obcaecati
+                necessitatibus!
+              </p>
+            </div>
+            <div class="col-lg-4">
+              <ul>
+                <li>
+                  <img src="../Img/arrow.png" alt="" />
+                  <a href="#">Lorem ipsum dolor sit amet.</a>
+                </li>
+                <li>
+                  <img src="../Img/arrow.png" alt="" />
+                  <a href="#">Lorem ipsum dolor sit amet.</a>
+                </li>
+                <li>
+                  <img src="../Img/arrow.png" alt="" />
+                  <a href="#">Lorem ipsum dolor sit amet.</a>
+                </li>
+                <li>
+                  <img src="../Img/arrow.png" alt="" />
+                  <a href="#">Lorem ipsum dolor sit amet.</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+        <div class="end"></div>
+        <div class="frame">
+          <h3>The screenshots</h3>
+          <div class="row">
+            <div id="screenshot" class="col-lg-3 float-left">
+              <a href="#"><img src="../Img/screenshot1.jpg" alt="" /></a>
+            </div>
+            <div id="screenshot" class="col-lg-3 float-left">
+              <a href="#"><img src="../Img/screenshot2.jpg" alt="" /></a>
+            </div>
+            <div id="screenshot" class="col-lg-3 float-left">
+              <a href="#"><img src="../Img/screenshot3.jpg" alt="" /></a>
+            </div>
+            <div id="screenshot" class="col-lg-3 float-left">
+              <a href="#"><img src="../Img/screenshot4.jpg" alt="" /></a>
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+        <div class="end"></div>
+        <div class="frame">
+          <h3>See what our customers are saying...</h3>
+          <blockquote class="blockquote">
+            <p class="mb-0">
+              <em>
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
+                repellat exercitationem commodi fugit nesciunt voluptatem
+                dolorum impedit "
+              </em>
+            </p>
+          </blockquote>
+          <p class="author">Mike Tyson, <em>Microsoft</em></p>
+          <div class="row justify-content-center">
+            <a href="#" class="orange">
+              <button class="btn btn-primary">Purchase now!</button>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <span
+              style="
+                font-size: 12px;
+                color: #8c8c8c;
+                display: flex;
+                align-items: center;
+              "
+              ><strong>or</strong></span
+            >
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="#" class="black">
+              <button class="btn btn-primary">Take a tour</button>
+            </a>
+            <div class="clear"></div>
+          </div>
+        </div>
+      </div>
+      <div id="bottom">
+        <div class="container">
+          <div class="frame text-white">
+            <div class="row justify-content-around">
+              <div class="col-lg-4">
+                <h3>Payment method</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est,
+                  ad minus. Rem repellendus dolorem voluptate et ullam quas
+                  iusto debitis.
+                </p>
+                <img src="../Img/mastercard.png" alt="" />
+                <img src="../Img/visa.png" alt="" />
+                <img src="../Img/paypal.png" alt="" />
+              </div>
+              <div class="col-lg-3">
+                <h3>Get in touch</h3>
+                <p>
+                  123 Main Street #3 <br />
+                  San Francisco, CA, 94101 <br />
+                  Phone: (866) 123-4567 eext#1 <br />
+                  FAX: (866) 123-0000 <br />
+                  Email: webdesign@shegy.pl
+                </p>
+              </div>
+              <div class="col-lg-3">
+                <h3>Design details</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Voluptas nobis debitis, rerum ex temporibus dicta eos quo
+                  doloribus veritatis quas!
+                </p>
+              </div>
+              <div class="col-lg-2">
+                <a href="#top"><img src="../Img/logo-small.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-lg-5 float-left">
+              <p>
+                Copyright &copy; 2011 Target. All rights reserved. Design by
+                <a href="#" style="color: #dd8c5c">Shegy</a>
+              </p>
+            </div>
+            <div class="col-lg-3 float-right">
+              <div class="social">
+                <a href="#"><img src="../Img/social1.png" alt="" /></a>
+                <a href="#"><img src="../Img/social2.png" alt="" /></a>
+                <a href="#"><img src="../Img/social3.png" alt="" /></a>
+                <a href="#"><img src="../Img/social4.png" alt="" /></a>
+                <a href="#"><img src="../Img/social5.png" alt="" /></a>
+                <a href="#"><img src="../Img/social6.png" alt="" /></a>
+                <a href="#"><img src="../Img/social7.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
