Change file structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../CSS/default.css" />
+    <link rel="stylesheet" href="./CSS/default.css" />
     <link
       rel="icon"
       href="https://public-assets.envato-static.com/icons/themeforest.net/apple-touch-icon-72x72-precomposed.png"
@@ -29,7 +29,7 @@
           <div class="frame">
             <h1>
               <a href="#">
-                <img src="../Img/logo.png" alt="Logo" />
+                <img src="./Img/logo.png" alt="Logo" />
                 Premium landing page template
               </a>
             </h1>
@@ -67,7 +67,7 @@
               </a>
             </div>
             <div id = "pic" class="col-lg-6 float-right">
-              <img src="../Img/slide1.jpg" alt="" />
+              <img src="./Img/slide1.jpg" alt="" />
             </div>
             <div class="clear"></div>
           </div>
@@ -77,7 +77,7 @@
         <div class="frame">
           <div class="row justify-content-around">
             <div class="col-lg-4 float-left">
-              <img src="../Img/1.png" alt="" />
+              <img src="./Img/1.png" alt="" />
               <div class="content">
                 <h3><a href="#">Quick and easy</a></h3>
                 <p>
@@ -89,7 +89,7 @@
               </div>
             </div>
             <div class="col-lg-4 float-left">
-              <img src="../Img/2.png" alt="" />
+              <img src="./Img/2.png" alt="" />
               <div class="content">
                 <h3><a href="#">Less risky </a></h3>
                 <p>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <img src="../Img/3.png" alt="" />
+              <img src="./Img/3.png" alt="" />
               <div class="content">
                 <h3><a href="#"> Optimized </a></h3>
                 <p>
@@ -136,19 +136,19 @@
             <div class="col-lg-4">
               <ul>
                 <li>
-                  <img src="../Img/arrow.png" alt="" />
+                  <img src="./Img/arrow.png" alt="" />
                   <a href="#">Lorem ipsum dolor sit amet.</a>
                 </li>
                 <li>
-                  <img src="../Img/arrow.png" alt="" />
+                  <img src="./Img/arrow.png" alt="" />
                   <a href="#">Lorem ipsum dolor sit amet.</a>
                 </li>
                 <li>
-                  <img src="../Img/arrow.png" alt="" />
+                  <img src="./Img/arrow.png" alt="" />
                   <a href="#">Lorem ipsum dolor sit amet.</a>
                 </li>
                 <li>
-                  <img src="../Img/arrow.png" alt="" />
+                  <img src="./Img/arrow.png" alt="" />
                   <a href="#">Lorem ipsum dolor sit amet.</a>
                 </li>
               </ul>
@@ -161,16 +161,16 @@
           <h3>The screenshots</h3>
           <div class="row">
             <div id="screenshot" class="col-lg-3 float-left">
-              <a href="#"><img src="../Img/screenshot1.jpg" alt="" /></a>
+              <a href="#"><img src="./Img/screenshot1.jpg" alt="" /></a>
             </div>
             <div id="screenshot" class="col-lg-3 float-left">
-              <a href="#"><img src="../Img/screenshot2.jpg" alt="" /></a>
+              <a href="#"><img src="./Img/screenshot2.jpg" alt="" /></a>
             </div>
             <div id="screenshot" class="col-lg-3 float-left">
-              <a href="#"><img src="../Img/screenshot3.jpg" alt="" /></a>
+              <a href="#"><img src="./Img/screenshot3.jpg" alt="" /></a>
             </div>
             <div id="screenshot" class="col-lg-3 float-left">
-              <a href="#"><img src="../Img/screenshot4.jpg" alt="" /></a>
+              <a href="#"><img src="./Img/screenshot4.jpg" alt="" /></a>
             </div>
           </div>
           <div class="clear"></div>
@@ -221,9 +221,9 @@
                   ad minus. Rem repellendus dolorem voluptate et ullam quas
                   iusto debitis.
                 </p>
-                <img src="../Img/mastercard.png" alt="" />
-                <img src="../Img/visa.png" alt="" />
-                <img src="../Img/paypal.png" alt="" />
+                <img src="./Img/mastercard.png" alt="" />
+                <img src="./Img/visa.png" alt="" />
+                <img src="./Img/paypal.png" alt="" />
               </div>
               <div class="col-lg-3">
                 <h3>Get in touch</h3>
@@ -244,7 +244,7 @@
                 </p>
               </div>
               <div class="col-lg-2">
-                <a href="#top"><img src="../Img/logo-small.png" alt="" /></a>
+                <a href="#top"><img src="./Img/logo-small.png" alt="" /></a>
               </div>
             </div>
           </div>
@@ -262,13 +262,13 @@
             </div>
             <div class="col-lg-3 float-right">
               <div class="social">
-                <a href="#"><img src="../Img/social1.png" alt="" /></a>
-                <a href="#"><img src="../Img/social2.png" alt="" /></a>
-                <a href="#"><img src="../Img/social3.png" alt="" /></a>
-                <a href="#"><img src="../Img/social4.png" alt="" /></a>
-                <a href="#"><img src="../Img/social5.png" alt="" /></a>
-                <a href="#"><img src="../Img/social6.png" alt="" /></a>
-                <a href="#"><img src="../Img/social7.png" alt="" /></a>
+                <a href="#"><img src="./Img/social1.png" alt="" /></a>
+                <a href="#"><img src="./Img/social2.png" alt="" /></a>
+                <a href="#"><img src="./Img/social3.png" alt="" /></a>
+                <a href="#"><img src="./Img/social4.png" alt="" /></a>
+                <a href="#"><img src="./Img/social5.png" alt="" /></a>
+                <a href="#"><img src="./Img/social6.png" alt="" /></a>
+                <a href="#"><img src="./Img/social7.png" alt="" /></a>
               </div>
             </div>
           </div>
